# docks

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Demo/: Docks Demo.jucer  docksDemo.jucer  layout.xml
Demo/Source/: Main.cpp
docks/: docks.cpp  docks.h
docks/source/: DockManager.cpp  DockManager.h  DockManagerData.cpp  DockManagerData.h  DockingComponent.cpp  DockingComponent.h  DockingWindow.cpp  DockingWindow.h  HeaderComponent.cpp  HeaderComponent.h
docks/tests/: catch2.hpp  test_DockManager.cpp  test_DockManagerData.cpp
